fix buttons/overlay z-index

--- a/styles/modules/save-poem.scss
+++ b/styles/modules/save-poem.scss
@@ -16,7 +16,7 @@
     width: 100vw;
     height: 100vh;
     background-color: white;
-    z-index: 1;
+    z-index: 100;
 
     .dialogue-open & {
         opacity: .7;
@@ -36,7 +36,7 @@
     padding: 10px;
     border-radius: 5px;
     background-color: lightgray;
-    z-index: 10;
+    z-index: 200;
 
     .dialogue-open & {
         opacity: 1;
